fix slider collapse

--- a/src/components/storyblok/BlokProjectSlider/BlokProjectSlider.module.sass
+++ b/src/components/storyblok/BlokProjectSlider/BlokProjectSlider.module.sass
@@ -4,11 +4,15 @@
   height: 100%
   padding: var(--spacing-base) var(--spacing-side)
 
+.slideStack
+  position: relative
+  display: grid
+  width: 100%
+
 .item
-  position: absolute
-  top: var(--spacing-base)
-  left: var(--spacing-side)
-  width: calc(100% - (var(--spacing-side) * 2))
+  position: relative
+  grid-area: 1 / 1
+  width: 100%
   display: flex
   flex-direction: column
   gap: 0.4545454546rem // 10px for 22px font size
